# IronGloveBackend

./: CMakeLists.txt  README.md  systems.lua
src/: Component.hpp  Components.cpp  Components.hpp  JsonWrapper.cpp  JsonWrapper.hpp  ScriptHost.cpp  ScriptHost.hpp  SnaggedFromFutureLua.cpp  SnaggedFromFutureLua.hpp  System.hpp  Systems.cpp  Systems.hpp  TimeKeeper.cpp  TimeKeeper.hpp  WebSocketWrapper.cpp  WebSocketWrapper.hpp  game.cpp  game.hpp  main.cpp
src/Components/: Collider.hpp  Generator.hpp  Health.hpp  Hero.hpp  Input.hpp  Monster.hpp  Pickup.hpp  Position.hpp  Reward.hpp  Tile.hpp  Weapon.hpp
src/Systems/: AI.cpp  AI.hpp  Generation.cpp  Generation.hpp  Hunger.cpp  Hunger.hpp  PickupSystem.cpp  PickupSystem.hpp  PlayerFiring.cpp  PlayerFiring.hpp  PlayerMovement.cpp  PlayerMovement.hpp  Render.cpp  Render.hpp  Weapons.cpp  Weapons.hpp
